--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-time-picker": "^4.4.4",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
